RESOLVED FIXED 20162
Web Inspector does not update the DOM tree when attributes change
https://bugs.webkit.org/show_bug.cgi?id=20162
Summary Web Inspector does not update the DOM tree when attributes change
Timothy Hatcher
Reported 2008-07-24 11:07:10 PDT
With the fix for bug 6590 we now update the DOM tree for element insertion and removal. But attributes changes do not update in the inspector. This is blocked by bug 8191.
Attachments
Uses the new direct callbacks from WebCore (9.08 KB, patch)
2010-01-13 18:44 PST, Kelly Norton
timothy: review+
timothy: commit-queue-
Timothy Hatcher
Comment 1 2009-04-11 18:29:34 PDT
*** Bug 25103 has been marked as a duplicate of this bug. ***
Kelly Norton
Comment 2 2010-01-13 18:44:50 PST
Created attachment 46534 [details] Uses the new direct callbacks from WebCore I don't see any significant change in dromaeo runs with this change: With Change: http://dromaeo.com/?id=85714 http://dromaeo.com/?id=85717 Without Change: http://dromaeo.com/?id=85721 http://dromaeo.com/?id=85722
Timothy Hatcher
Comment 3 2010-01-13 19:26:57 PST
Comment on attachment 46534 [details] Uses the new direct callbacks from WebCore > + var event = { target : node }; This should be: {target: node} > + _attributesUpdated : function(event) There should be no space before the ":".
Kelly Norton
Comment 4 2010-01-13 19:49:51 PST
Note You need to log in before you can comment on or make changes to this bug.